Set border-radius 0 on input to fix issue on Safari where input id appeared rounded and fix the color picker to be rectangle instead of ovale on Safari

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -174,6 +174,7 @@ body.aframe-inspector-opened
   input.number
     min-height 14px
     outline none
+    border-radius 0
 
   input[type="checkbox"]
     appearance auto
@@ -235,6 +236,7 @@ body.aframe-inspector-opened
 
   input[type=color]::-webkit-color-swatch-wrapper
     padding 0  /* To remove the inner padding. */
+    border-radius 0  /* So it appears as rectangle instead of an ovale in Safari */
 
   input[type=color]::-moz-color-swatch
     border 0
